tests/machine/x/ocaml/partial_application.error
File "/tmp/TestOCamlCompiler_VMValid_Goldenpartial_application4126242528/001/partial_application.ml", line 23, characters 17-22:
23 | let add5 : int = add 5
                      ^^^^^
Warning 5 [ignored-partial-application]: this function application is partial,
maybe some arguments are missing.
File "/tmp/TestOCamlCompiler_VMValid_Goldenpartial_application4126242528/001/partial_application.ml", line 23, characters 17-22:
23 | let add5 : int = add 5
                      ^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int
